--- a/index.html
+++ b/index.html
@@ -1,5 +1,31 @@
-<a href="mailto:email@example.com" style="text-decoration: none;">
-  <button type="button" style="background-color: #4CAF50; color: white; padding: 15px 32px; text-align: center; font-size: 16px; margin: 4px 2px; cursor: pointer;">
-    İletişime Geç
-  </button>
-</a>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>İletişim Butonu</title>
+    <style>
+        .contact-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 200px;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        .contact-button img {
+            margin-right: 10px;
+        }
+    </style>
+</head>
+<body>
+    <a href="tel:+905555555555" class="contact-button">
+        <img src="https://img.icons8.com/ios-filled/50/ffffff/phone.png" alt="Telefon" width="24" height="24">
+        İletişim
+    </a>
+</body>
+</html>
